# tap-eurostat

./: LICENSE  README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: build.yml  test.yml
tap_eurostat/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap_eurostat/schemas/: demo_pjan.json  env_air_gge.json  gov_10dd_edpt1.json  ilc_mddd11.json  isoc_ci_ifp_iu.json  lfsa_urgan.json  migr_imm1ctz.json  nama_10_gdp.json  nrg_ind_ren.json  prc_hicp_aind.json
tests/: __init__.py  test_core.py
